[package]
name = "am_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
itertools = "0.10.5"
rayon = "1.7.0"
thiserror = "1.0.40"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
walkdir = "2.3.3"
