[package]
name = "am_list"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gagbo/am_list"
authors = ["Gerry Agbobada <gerry@fiberplane.com>"]
description = "A tree-sitter command line tool to list functions marked with Autometrics annotations"
homepage = "https://autometrics.dev"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
itertools = "0.10.5"
rayon = "1.7.0"
thiserror = "1.0.40"
tree-sitter = "0.20.10"
tree-sitter-go = "0.19.1"
tree-sitter-rust = "0.20.3"
walkdir = "2.3.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
