[package]
name = "am_list"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/autometrics-dev/am_list"
authors = ["Fiberplane <info@fiberplane.com>", "Gerry Agbobada <gerry@fiberplane.com>"]
description = "A tree-sitter-powered command line tool to list functions marked with Autometrics annotations"
homepage = "https://autometrics.dev"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
flexi_logger = { version = "0.25.5", features = ["colors"] }
itertools = "0.10.5"
log = "0.4.18"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tree-sitter = "0.20.10"
tree-sitter-go = "0.19.1"
tree-sitter-rust = "0.20.3"
walkdir = "2.3.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
unix-archive = ".tar.gz"

[dev-dependencies]
pretty_assertions = "1.3.0"
